--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+/* root styling */
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -6,38 +7,25 @@
   background-image: none;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+ul {
+  list-style-type: none;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+h2 {
+  text-align: left;
+  font-size: 2rem;
 }
 
+/* card display styling */
 .card {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 1rem;
+  margin-bottom: 1rem;
   border: 4px solid royalblue;
   border-radius: 8px;
   padding: 8px;
@@ -52,8 +40,12 @@
   opacity: 0.5;
 }
 
-.read-the-docs {
-  color: #888;
+/* set image cards */
+.set-card {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  padding: 8px;
 }
 
 /* Style for the expanded image overlay */
@@ -129,4 +121,11 @@
 
 .nav li:hover {
   color: white;
+}
+
+.rarity-links {
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 10rem;
+  font-size: 1.5rem;
 }
