--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,14 @@
 /* root styling */
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: auto;
+  padding: 0 ;
   text-align: center;
   background-image: none;
+}
+
+body {
+  background-color: rgba(193, 209, 230, 0.548);
 }
 
 ul {
@@ -18,6 +22,13 @@ a {
 h2 {
   text-align: left;
   font-size: 2rem;
+}
+
+
+.img-card {
+  min-width: 1200px;
+  max-height: 25rem;
+  border-radius: 1rem;
 }
 
 /* card display styling */
@@ -48,6 +59,17 @@ h2 {
   padding: 8px;
 }
 
+/* news elements */
+
+.news-image {
+  width: 15rem;
+  height: 15rem;
+}
+
+.news-image:hover {
+  opacity: 0.5;
+}
+
 /* Style for the expanded image overlay */
 .expanded-image-overlay {
   position: fixed;
@@ -75,9 +97,28 @@ h2 {
   border-radius: 1rem;
 }
 
-.container {
-  margin: 1rem;
-  text-align: center;
+
+/* buttons */
+
+button {
+  border: 2px solid black;
+  border-radius: 2rem;
+  font-size: 1rem;
+  min-width: 8rem;
+  background-color: slateblue;
+  padding: 1rem;
+}
+
+button:hover {
+  background-color: rgba(255, 104, 3, 0.884);
+}
+
+.rarity-btn {
+  color: white;
+}
+
+.set-btn {
+  max-width: 20rem;
 }
 
 /* navbar */
@@ -87,15 +128,14 @@ h2 {
 }
 
 .nav {
-  background-color: rgba(65, 105, 225, 0.726);
   color: black;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  border-radius: 0;
+  border-radius: 1rem;
   gap: 2rem;
-  padding: 7rem 1rem 1rem 0;
-  padding-inline: 1rem;
+  padding: 1rem 1rem 1rem 0;
+  padding-inline: 5rem;
 }
 
 .nav ul {
@@ -116,16 +156,16 @@ h2 {
 }
 
 .nav li.active {
-  color: white;
+  color: royalblue;
 }
 
 .nav li:hover {
-  color: white;
+  color: royalblue;
 }
 
 .rarity-links {
   display: flex;
   justify-content: space-between;
-  padding-inline: 10rem;
+  padding-inline: 7rem;
   font-size: 1.5rem;
 }
