--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,18 @@
 /* root styling */
 #root {
-  max-width: 1280px;
-  margin: auto;
-  padding: 0 ;
-  text-align: center;
+  width: 100%;
+  padding: 0;
+  position: absolute;
   background-image: none;
 }
 
+html,
 body {
-  background-color: rgba(193, 209, 230, 0.548);
+  min-height: 100%;
+  overflow-x: hidden;
+  text-align: center;
+  margin: auto;
+  background-color: white;
 }
 
 ul {
@@ -24,6 +28,11 @@ h2 {
   font-size: 2rem;
 }
 
+input {
+  border: none;
+}
+
+/* card display styling */
 
 .img-card {
   min-width: 1200px;
@@ -31,10 +40,16 @@ h2 {
   border-radius: 1rem;
 }
 
-/* card display styling */
+.background-bar {
+  background-color: royalblue;
+  width: 125rem;
+  height: 15rem;
+  padding-top: 2rem;
+}
+
 .card {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(9, 10rem);
   gap: 1rem;
   margin-bottom: 1rem;
   border: 4px solid royalblue;
@@ -42,9 +57,15 @@ h2 {
   padding: 8px;
 }
 
+.container {
+  max-width: fit-content;
+  margin: auto;
+}
+
 .card-image {
-  max-width: 10rem;
+  width: 10rem;
   border-radius: 8px;
+  border: 1px solid black;
 }
 
 .card-image:hover {
@@ -54,20 +75,9 @@ h2 {
 /* set image cards */
 .set-card {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 21rem);
   gap: 1rem;
   padding: 8px;
-}
-
-/* news elements */
-
-.news-image {
-  width: 15rem;
-  height: 15rem;
-}
-
-.news-image:hover {
-  opacity: 0.5;
 }
 
 /* Style for the expanded image overlay */
@@ -86,31 +96,154 @@ h2 {
 
 /* Style for the container holding the expanded image */
 .expanded-image-container {
-  max-width: 80%;
-  max-height: 80%;
+  max-width: 38rem;
+  max-height: 42rem;
 }
 
 /* Style for the expanded image itself */
 .expanded-image-container img {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 80%;
+  max-height: 80%;
   border-radius: 1rem;
 }
 
 
+/* deck builder */
+#deck-builder-bg {
+  width: 1860px;
+  height: 840px;
+  background-image: url(../public/images/deckeditbackground.jpg);
+  border: 1px solid black;
+}
+
+#filter-cards-db {
+  width: 36%;
+  font-size: 1rem;
+  text-align: left;
+  float: left;
+  padding-inline: 4px;
+  padding-left: 2rem;
+}
+
+#deck {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  overflow-y: scroll;
+  background-color: rgba(210, 180, 140, 0.658);
+  border-radius: 4px;
+  margin: 4px 4px 0 0;
+  width: 60%;
+  height: 45.5%;
+  margin-top: 6px;
+  float: right;
+}
+
+.deck-button {
+  margin-top: 6px;
+  padding-inline: 1rem;
+  margin-inline: 10px;
+  border: 1px solid black;
+  border-radius: 4px;
+  font-size: 1rem;
+  width: 5rem;
+  background-color: royalblue;
+  padding: 2px;
+}
+
+#cards-db {
+  background-color: rgba(210, 180, 140, 0.658);
+  overflow-y: scroll;
+  border-radius: 4px;
+  margin: 4px 4px 0 0;
+  width: 99%;
+  height: 48.5%;
+  float: right;
+  margin-top: 8px;
+  padding-inline: 4px;
+}
+
+.checkbox-container {
+  display: flex;
+  gap: 8px;
+  padding-top: 22.2rem;
+  margin-bottom: 0;
+  font-size: 1.5rem;
+}
+
+.checkbox {
+  color: white;
+  height: 2rem;
+  width: 20rem;
+  border: none;
+  border-radius: 4px;
+}
+
+.checkbox:focus {
+  border: 2px solid white !important;
+}
+
+.deck-cards {
+  margin: 1rem;
+  width: 5rem;
+  top: 0;
+}
+
+.deck-cards-btns {
+  position: absolute;
+  margin-bottom: 100rem;
+}
+
+.card-db {
+  display: grid;
+  grid-template-columns: repeat(15, 6rem);
+  gap: 4px;
+  border-radius: 8px;
+  padding: 4px 0 0 20.5rem;
+}
+
+.card-image-db {
+  width: 6rem;
+  border-radius: 8px;
+  border: 1px solid black;
+}
+
+.card-image-db:hover {
+  opacity: 0.5;
+}
+
+.expanded-image-db {
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 1rem;
+  left: 3.5rem;
+  top: 34rem;
+  width: 18rem;
+}
+
 /* buttons */
 
 .button {
-  border: 2px solid black;
-  border-radius: 2rem;
+  border: 1px solid black;
+  border-radius: 8px;
   font-size: 1rem;
   min-width: 8rem;
-  background-color: slateblue;
-  padding: 1rem;
+  background-color: royalblue;
+  padding: 8px;
+}
+
+.set-icon {
+  border: 2px solid black;
+  border-radius: 8px;
+  font-size: 1rem;
+  min-width: 8rem;
+  background-color: royalblue;
+  padding: 4px 4px 4px 4px;
 }
 
 button:hover {
   background-color: rgba(255, 104, 3, 0.884);
+  cursor: pointer;
 }
 
 .rarity-btn {
@@ -119,6 +252,7 @@ button:hover {
 
 .set-btn {
   max-width: 20rem;
+  height: 11rem;
 }
 
 /* navbar */
@@ -130,6 +264,7 @@ button:hover {
 .nav {
   color: black;
   display: flex;
+  margin: auto;
   justify-content: space-between;
   align-items: stretch;
   border-radius: 1rem;
@@ -138,12 +273,26 @@ button:hover {
   padding-inline: 5rem;
 }
 
+@media (max-width: 1024px) {
+  .nav {
+    width: 100%;
+    margin: auto;
+  }
+}
+
 .nav ul {
-  padding: 0;
-  margin: 0;
+  padding-inline: 4rem;
   list-style: none;
   display: flex;
   gap: 1rem;
+}
+
+@media (max-width: 440px) {
+  .nav ul {
+    display: none;
+    font-size: 1.5rem;
+    margin: auto;
+  }
 }
 
 .nav a {
@@ -166,41 +315,53 @@ button:hover {
 .rarity-links {
   display: flex;
   justify-content: space-between;
-  padding-inline: 7rem;
+  padding-inline: 18rem;
   font-size: 1.5rem;
 }
 
-/* CSS for the Prev and Next Buttons */
-.prev-btn,
-.next-btn {
-  width: 0;
-  height: 0;
-  border: 10px solid transparent;
-  cursor: pointer;
-  margin-inline: 4rem;
-  top: 50%;
-  transform: translateY(-50%);
+/* card icons */
+
+#icons-background {
+  height: 5rem;
+  width: 1.5rem;
+  background-color: rgba(255, 255, 255, 0.836);
+  border-radius: 1rem;
+  border: 1px solid black;
 }
 
-.prev-btn {
-  border-right: 1rem solid slateblue;
-  left: 10px;
-}
-
-.next-btn {
-  border-left: 1rem solid slateblue;
-  right: 10px;
-}
-
-.on-close-btn {
+.vertical-grid {
+  display: grid;
+  max-height: 1px;
+  grid-template-rows: repeat(1fr, 1);
   position: relative;
-  bottom: 18rem;
-  left: 35rem;
-  padding: 10px;
-  background-color: rgba(0, 0, 0, 0.9);
-  color: white;
-  border: none;
-  border-radius: 4px;
+  top: 1rem;
+  right: 1.8rem;
+}
+
+.card-icons {
+  height: 1.5rem;
   cursor: pointer;
-  font-size: 10px;
+}
+
+#card-count {
+  font-size: 1.3rem;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#count-container {
+  border-radius: 2rem;
+  border: 1px solid black;
+  background-color: rgba(255, 255, 255, 0.836);
+}
+
+.inline {
+  display: inline-flex;
+}
+
+
+
+
+.duplicate-card {
+  margin-left: 1rem; /* Shift to the right by 1rem */
 }
